kubernetes/liferay-k3s/00-liferay-configs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liferay
