kubernetes/liferay-k3s/99-liferay-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: liferay-nginx
  namespace: liferay
  labels:
    app: liferay
    tier: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: liferay
    tier: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liferay-nginx
  namespace: liferay
  labels:
    app: liferay
    tier: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liferay
      tier: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liferay
        tier: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.2
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              subPath: nginx.conf
              mountPath: /etc/nginx/nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: liferay-nginx-config
