kubernetes/liferay-k3s/database-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - port: 3306
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - args:
            - mysqld
            - --character-set-server=utf8
            - --collation-server=utf8_general_ci
            - --character-set-filesystem=utf8
          image: mysql:5.7.44
          resources:
            limits:
              memory: "512Mi"
              cpu: "0.5"
          ports:
            - containerPort: 3306
          name: database
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: database-data
      restartPolicy: Always
      volumes:
        - name: database-data
          persistentVolumeClaim:
            claimName: database-data
