kubernetes/liferay-k3s/05-liferay-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
#    traefik.ingress.kubernetes.io/entrypoints: websecure
#    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
#    traefik.ingress.kubernetes.io/forwarded-headers-trusted: "true"
  name: liferay-ingress
  namespace: liferay
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`liferay.local.tmf-solutions.com`) || Host(`liferay.tmf-solutions.com`)
      services:
        - name: liferay-portal
          port: 8080
      middlewares:
        - name: liferay-headers
  tls:
    secretName: tmf-solutions-com-live-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: liferay-headers
  namespace: liferay
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Port: "443"

#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  annotations:
#    kubernetes.io/ingress.class: traefik-external
#  name: liferay-ingress
#  namespace: liferay
#spec:
#  entryPoints:
#    - web
#  routes:
#    - kind: Rule
#      match: Host(`liferay.local.tmf-solutions.com`) || Host(`liferay.tmf-solutions.com`)
#      middlewares:
#        - name: disable-https-redirection
#      services:
#        - name: liferay-portal
#          port: 8080
#
#---
#apiVersion: traefik.io/v1alpha1
#kind: Middleware
#metadata:
#  name: disable-https-redirection
#  namespace: liferay
#spec:
#  headers:
#    customResponseHeaders:
#      Location: ""
#    forceSTSHeader: false
#    stsSeconds: 0
