kubernetes/liferay-k3s/06-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: liferay
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
    - host: liferay.local.tmf-solutions.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: liferay-nginx
                port:
                  number: 8080
